--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
             </select>
             <input type="tel" id="phone" placeholder="Ingresa tu número de teléfono" required>
           </div>
-          <button id="sendToEmail">Enviar</button>
+          <button id="bybettycd@gmail.com">Enviar</button>
         </div>
       </div>
     </div>
