--- a/index.html
+++ b/index.html
@@ -6,35 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="imagenes/IMG-ico.ico">
   <title>SALUDDIVINA</title>
-
-  <!-- Meta Pixel Code -->
-  <script>
-    !function(f, b, e, v, n, t, s) {
-      if (f.fbq) return;
-      n = f.fbq = function() {
-        n.callMethod ?
-          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-      };
-      if (!f._fbq) f._fbq = n;
-      n.push = n.loaded = !0;
-      n.version = '2.0';
-      n.queue = [];
-      t = b.createElement(e);
-      t.async = !0;
-      t.src = v;
-      s = b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t, s)
-    }(window, document, 'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '1320673155625730');
-    fbq('track', 'PageView');
-  </script>
-  <noscript>
-    <img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1" />
-  </noscript>
-  <!-- End Meta Pixel Code -->
-
+    <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1320673155625730');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
+  
   <style>
     body {
       margin: 0;
@@ -122,30 +111,6 @@
       font-size: 1rem;
     }
 
-    .phone-input {
-      display: flex;
-      align-items: center;
-      border: 1px solid #d1d5db;
-      border-radius: 5px;
-      padding: 10px;
-      gap: 10px;
-    }
-
-    .phone-input select {
-      border: none;
-      background: none;
-      padding: 5px;
-      font-size: 1rem;
-      cursor: pointer;
-    }
-
-    .phone-input input {
-      border: none;
-      width: 100%;
-      padding: 5px;
-      font-size: 1rem;
-    }
-
     .form button {
       width: 100%;
       background-color: #10b981;
@@ -156,11 +121,42 @@
       font-size: 1rem;
       cursor: pointer;
       transition: background-color 0.3s;
-      margin-top: 15px;
     }
 
     .form button:hover {
       background-color: #059669;
+    }
+
+    .testimonials {
+      margin-top: 50px;
+      font-size: 0.9rem;
+      color: #6b7280;
+    }
+
+    .testimonials img {
+      height: 30px;
+      margin: 0 10px;
+      opacity: 0.8;
+    }
+    
+    .phone-input {
+      display: flex;
+      align-items: center;
+      border: 1px solid #d1d5db;
+      border-radius: 5px;
+      padding: 10px;
+    }
+
+    .phone-input select {
+      border: none;
+      margin-right: 10px;
+      padding: 0;
+    }
+
+    .phone-input input {
+      border: none;
+      width: 100%;
+      padding: 0;
     }
   </style>
 </head>
@@ -169,7 +165,7 @@
   <div class="container">
     <div class="header">
       <h1>¿Quieres tener salud divina?</h1>
-      <p>Aquí encontrarás la posibilidad de sanar tu cuerpo con productos totalmente naturales probados científicamente.
+      <p>Aqui encontraras la posibilidad de sanar tu cuerpo con productos totalmente naturales probados cientificamente.
       </p>
     </div>
     <div class="logo">
@@ -202,23 +198,82 @@
         </div>
       </div>
     </div>
+
+    <style>
+  .phone-input {
+    display: flex;
+    gap: 5px;
+  }
+  select, input[type="tel"] {
+    flex: 1;
+  }
+</style>
+    <div class="testimonials">
+      <p>Estamos en los siguientes países:</p>
+      <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
+          <div style="text-align: center;">
+              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Flag_of_the_United_States.svg" alt="Bandera de Estados Unidos" width="50"></a>
+              <p>Estados Unidos</p>
+          </div>
+          <div style="text-align: center;">
+              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Flag_of_Chile.svg" alt="Bandera de Chile" width="50"></a>
+              <p>Chile</p>
+          </div>
+          <div style="text-align: center;">
+              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Flag_of_Peru.svg" alt="Bandera de Perú" width="50"></a>
+              <p>Perú</p>
+          </div>
+          <div style="text-align: center;">
+              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/Flag_of_Mexico.svg" alt="Bandera de México" width="50"></a>
+              <p>México</p>
+          </div>
+          <div style="text-align: center;">
+              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Flag_of_Colombia.svg" alt="Bandera de Colombia" width="50"></a>
+              <p>Colombia</p>
+          </div>
+          <div style="text-align: center;">
+              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/4/48/Flag_of_Bolivia.svg" alt="Bandera de Bolivia" width="50"></a>
+              <p>Bolivia</p>
+          </div>
+          <div style="text-align: center;">
+              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Flag_of_Ecuador.svg" alt="Bandera de Ecuador" width="50"></a>
+              <p>Ecuador</p>
+          </div>
+          <div style="text-align: center;">
+              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Flag_of_Guatemala.svg" alt="Bandera de Guatemala" width="50"></a>
+              <p>Guatemala</p>
+          </div>
+          <div style="text-align: center;">
+              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Flag_of_El_Salvador.svg" alt="Bandera de El Salvador" width="50"></a>
+              <p>El Salvador</p>
+          </div>
+          <div style="text-align: center;">
+              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Flag_of_Panama.svg" alt="Bandera de Panamá" width="50"></a>
+              <p>Panamá</p>
+          </div>
+      </div>
+  </div>
   </div>
 
   <script>
-    document.getElementById('sendToEmail').addEventListener('click', function() {
+    document.getElementById('sendToEmail').addEventListener('click', function () {
+      // Obtén los datos del formulario
       const name = document.getElementById('name').value;
       const email = document.getElementById('email').value;
       const countryCode = document.getElementById('countryCode').value;
       const phone = document.getElementById('phone').value;
 
+      // Verifica que los campos no estén vacíos
       if (!name || !email || !phone) {
         alert('Por favor, completa todos los campos antes de enviar.');
         return;
       }
 
-      const message = `Hola, mi nombre es ${name}, mi correo es ${email} y mi número de teléfono es ${countryCode} ${phone}. Me interesa la información de los productos.`;
+      // Construye el mensaje
+      const message = Hola, mi nombre es ${name}, mi correo es ${email} y mi número de teléfono es ${countryCode} ${phone}. Me interesa la información de los productos.;
 
-      window.location.href = `mailto:bybettycd@gmail.com?subject=Información de Productos&body=${encodeURIComponent(message)}`;
+      // Envia el correo
+      window.location.href = mailto:bybettycd@gmail.com?subject=Información de Productos&body=${encodeURIComponent(message)};
     });
   </script>
 </body>
