--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
   <div class="container">
     <div class="header">
       <h1>¿Quieres tener salud divina?</h1>
-      <p>Aqui encontraras la posibilidad de sanar tu cuerpo con productos totalmente naturales probados cientificamente.
+      <p>Este es el lugar perfecto para alcanzar nuestros sueños más bellos y las ilusiones del mañana.
       </p>
     </div>
     <div class="logo">
-      <img src="imagenes/Logo.jpg" style="height: 100px;" alt="Logo">
+      <img src="imagenes/Imagen de WhatsApp 2025-02-15 a las 10.14.16_75d202ec.jpg" style="height: 100px;" alt="Logo">
     </div>
     <div class="cta-section">
       <div class="cta-container">
