--- a/index.html
+++ b/index.html
@@ -171,43 +171,34 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
     <div class="logo">
       <img src="imagenes/Imagen de WhatsApp 2025-02-15 a las 10.14.16_75d202ec.jpg" style="height: 200px; width: 100px;" alt="Logo">
     </div>
-    <div class="cta-section">
-      <div class="cta-container">
-        <div class="form">
-          <label for="name">Nombre:</label>
-          <input type="text" id="name" placeholder="Ingresa tu nombre" required>
-          <label for="email">Correo electrónico:</label>
-          <input type="email" id="email" placeholder="Ingresa tu correo" required>
-          <label for="phone">Número de teléfono:</label>
-          <div class="phone-input">
-            <select id="countryCode">
-              <option value="+1">🇺🇸 +1</option>
-              <option value="+56">🇨🇱 +56</option>
-              <option value="+51">🇵🇪 +51</option>
-              <option value="+52">🇲🇽 +52</option>
-              <option value="+57">🇨🇴 +57</option>
-              <option value="+591">🇧🇴 +591</option>
-              <option value="+593">🇪🇨 +593</option>
-              <option value="+502">🇬🇹 +502</option>
-              <option value="+503">🇸🇻 +503</option>
-              <option value="+507">🇵🇦 +507</option>
-            </select>
-            <input type="tel" id="phone" placeholder="Ingresa tu número de teléfono" required>
-          </div>
-          <button id="sendToEmail">Enviar</button>
-        </div>
+  <div class="cta-section">
+  <div class="cta-container">
+    <div class="form">
+      <label for="name">Nombre:</label>
+      <input type="text" id="name" placeholder="Ingresa tu nombre" required>
+      <label for="email">Correo electrónico:</label>
+      <input type="email" id="email" placeholder="Ingresa tu correo" required>
+      <label for="phone">Número de teléfono:</label>
+      <div class="phone-input">
+        <select id="countryCode">
+          <option value="+1">🇺🇸 Estados Unidos +1</option>
+          <option value="+56">🇨🇱 Chile +56</option>
+          <option value="+51">🇵🇪 Perú +51</option>
+          <option value="+52">🇲🇽 México +52</option>
+          <option value="+57">🇨🇴 Colombia +57</option>
+          <option value="+591">🇧🇴 Bolivia +591</option>
+          <option value="+593">🇪🇨 Ecuador +593</option>
+          <option value="+502">🇬🇹 Guatemala +502</option>
+          <option value="+503">🇸🇻 El Salvador +503</option>
+          <option value="+507">🇵🇦 Panamá +507</option>
+        </select>
+        <input type="tel" id="phone" placeholder="Ingresa tu número de teléfono" required>
       </div>
+      <button id="sendToEmail">Enviar</button>
     </div>
+  </div>
+</div>
 
-    <style>
-  .phone-input {
-    display: flex;
-    gap: 5px;
-  }
-  select, input[type="tel"] {
-    flex: 1;
-  }
-</style>
     <div class="testimonials">
       <p>Estamos en los siguientes países:</p>
       <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
