--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
 
 
     <div class="testimonials">
-      <p>Estamos en los siguientes países:</p>
+      <p>Nos encontraras en los siguientes países:</p>
       <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
           <div style="text-align: center;">
               <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Flag_of_the_United_States.svg" alt="Bandera de Estados Unidos" width="50"></a>
