--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
     <div class="form">
       <label for="name">Nombre:</label>
       <input type="text" id="name" placeholder="Ingresa tu nombre" required>
-      <label for="email">Correo electrónico:</label>   quiero que donde va el numero quede haci oviamente que se vea iguai de ancho y alto que las otras casillas puede o no puede 
+      <label for="email">Correo electrónico:</label>    
       <input type="email" id="email" placeholder="Ingresa tu correo" required>
       <label for="phone">Número de teléfono:</label>
       <div class="phone-input">
