--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
       const message = `Hola, mi nombre es ${name}, mi correo es ${email} y mi número de teléfono es ${countryCode} ${phone}. Me interesa la información del negocio.`;
 
       // Envía un mensaje de WhatsApp
-      const whatsappUrl = `https://wa.me/573244473967${phone}?text=${encodeURIComponent(message)}`;
+      const whatsappUrl = `https://wa.me/+573244473967${phone}?text=${encodeURIComponent(message)}`;
       window.open(whatsappUrl, '_blank');
     });
   </script>
