--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
     }
 
     .form input {
-      width: 100%;
+      width: calc(100% - 22px); /* Adjusted width to fit the container */
       padding: 10px;
       margin-bottom: 15px;
       border: 1px solid #d1d5db;
@@ -145,17 +145,19 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
       border: 1px solid #d1d5db;
       border-radius: 5px;
       padding: 10px;
+      width: calc(100% - 22px); /* Adjusted width to fit the container */
     }
 
     .phone-input select {
       border: none;
       margin-right: 10px;
       padding: 0;
-      max-width: 50px; /* Reduce the width of the select when closed */
+      max-width: 100px; /* Reduce the width of the select when closed */
     }
 
     .phone-input select option {
       max-width: none; /* Ensure the options are full width */
+      padding: 5px; /* Ensure the options are fully visible */
     }
 
     .phone-input input {
@@ -266,7 +268,7 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
       }
 
       // Construye el mensaje
-      const message = `Hola, mi nombre es ${name}, mi correo es ${email} y mi número de teléfono es ${countryCode} ${phone}. Me interesa la información del negocio.`;
+      const message = `Hola, mi nombre es ${name}, mi correo es ${email} y mi número de teléfono es ${countryCode} ${phone}. Me interesa la información de los productos.`;
 
       // Envía un mensaje de WhatsApp al número especificado
       const whatsappUrl = `https://wa.me/573244473967?text=${encodeURIComponent(message)}`;
