--- a/index.html
+++ b/index.html
@@ -143,12 +143,13 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
       display: flex;
       align-items: center;
       width: calc(100% - 22px); /* Adjusted width to fit the container */
+      border: 1px solid #d1d5db;
+      border-radius: 5px;
     }
 
     .phone-input select {
-      border: 1px solid #d1d5db;
-      border-radius: 5px 0 0 5px;
-      margin-right: -1px;
+      border: none;
+      margin-right: 10px;
       padding: 10px;
       max-width: 100px; /* Reduce the width of the select when closed */
     }
@@ -159,11 +160,10 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
     }
 
     .phone-input input {
-      border: 1px solid #d1d5db;
-      border-radius: 0 5px 5px 0;
+      border: none;
       width: 100%;
       padding: 10px;
-      text-align: center;
+      text-align: left;
     }
   </style>
 </head>
@@ -177,80 +177,80 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
     </div>
     <div class="logo">
       <img src="imagenes/Imagen de WhatsApp 2025-02-15 a las 10.14.16_75d202ec.jpg" style="height: 200px; width: 200px;" alt="Logo" >
-    </div><div class="cta-section">
-  <div class="cta-container">
-    <div class="form">
-      <label for="name">Nombre:</label>
-      <input type="text" id="name" placeholder="Ingresa tu nombre" required>
-      <label for="email">Correo electrónico:</label>    
-      <input type="email" id="email" placeholder="Ingresa tu correo" required>
-      <label for="phone">Número de teléfono:</label>
-      <div class="phone-input">
-        <select id="countryCode">
-          <option value="+1">🇺🇸 +1</option>
-          <option value="+56">🇨🇱 +56</option>
-          <option value="+51">🇵🇪 +51</option>
-          <option value="+52">🇲🇽 +52</option>
-          <option value="+57">🇨🇴 +57</option>
-          <option value="+591">🇧🇴 +591</option>
-          <option value="+593">🇪🇨 +593</option>
-          <option value="+502">🇬🇹 +502</option>
-          <option value="+503">🇸🇻 +503</option>
-          <option value="+507">🇵🇦 +507</option>
-        </select>
-        <input type="tel" id="phone" placeholder="Ingresa tu número de teléfono" required>
-      </div>
-      <button id="sendToWhatsApp">Enviar</button>
     </div>
-  </div>
-</div>
-
+    <div class="cta-section">
+      <div class="cta-container">
+        <div class="form">
+          <label for="name">Nombre:</label>
+          <input type="text" id="name" placeholder="Ingresa tu nombre" required>
+          <label for="email">Correo electrónico:</label>    
+          <input type="email" id="email" placeholder="Ingresa tu correo" required>
+          <label for="phone">Número de teléfono:</label>
+          <div class="phone-input">
+            <select id="countryCode">
+              <option value="+1">🇺🇸 +1</option>
+              <option value="+56">🇨🇱 +56</option>
+              <option value="+51">🇵🇪 +51</option>
+              <option value="+52">🇲🇽 +52</option>
+              <option value="+57">🇨🇴 +57</option>
+              <option value="+591">🇧🇴 +591</option>
+              <option value="+593">🇪🇨 +593</option>
+              <option value="+502">🇬🇹 +502</option>
+              <option value="+503">🇸🇻 +503</option>
+              <option value="+507">🇵🇦 +507</option>
+            </select>
+            <input type="tel" id="phone" placeholder="Ingresa tu número de teléfono" required>
+          </div>
+          <button id="sendToWhatsApp">Enviar</button>
+        </div>
+      </div>
+    </div>
 
     <div class="testimonials">
       <p>Nos encontraras en los siguientes países:</p>
       <div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap;">
-          <div style="text-align: center;">
-              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Flag_of_the_United_States.svg" alt="Bandera de Estados Unidos" width="50"></a>
-              <p>Estados Unidos</p>
-          </div>
-          <div style="text-align: center;">
-              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Flag_of_Chile.svg" alt="Bandera de Chile" width="50"></a>
-              <p>Chile</p>
-          </div>
-          <div style="text-align: center;">
-              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Flag_of_Peru.svg" alt="Bandera de Perú" width="50"></a>
-              <p>Perú</p>
-          </div>
-          <div style="text-align: center;">
-              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/Flag_of_Mexico.svg" alt="Bandera de México" width="50"></a>
-              <p>México</p>
-          </div>
-          <div style="text-align: center;">
-              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Flag_of_Colombia.svg" alt="Bandera de Colombia" width="50"></a>
-              <p>Colombia</p>
-          </div>
-          <div style="text-align: center;">
-              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/4/48/Flag_of_Bolivia.svg" alt="Bandera de Bolivia" width="50"></a>
-              <p>Bolivia</p>
-          </div>
-          <div style="text-align: center;">
-              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Flag_of_Ecuador.svg" alt="Bandera de Ecuador" width="50"></a>
-              <p>Ecuador</p>
-          </div>
-          <div style="text-align: center;">
-              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Flag_of_Guatemala.svg" alt="Bandera de Guatemala" width="50"></a>
-              <p>Guatemala</p>
-          </div>
-          <div style="text-align: center;">
-              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Flag_of_El_Salvador.svg" alt="Bandera de El Salvador" width="50"></a>
-              <p>El Salvador</p>
-          </div>
-          <div style="text-align: center;">
-              <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Flag_of_Panama.svg" alt="Bandera de Panamá" width="50"></a>
-              <p>Panamá</p>
-          </div>
+        <div style="text-align: center;">
+          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Flag_of_the_United_States.svg" alt="Bandera de Estados Unidos" width="50"></a>
+          <p>Estados Unidos</p>
+        </div>
+        <div style="text-align: center;">
+          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Flag_of_Chile.svg" alt="Bandera de Chile" width="50"></a>
+          <p>Chile</p>
+        </div>
+        <div style="text-align: center;">
+          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/Flag_of_Peru.svg" alt="Bandera de Perú" width="50"></a>
+          <p>Perú</p>
+        </div>
+        <div style="text-align: center;">
+          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/Flag_of_Mexico.svg" alt="Bandera de México" width="50"></a>
+          <p>México</p>
+        </div>
+        <div style="text-align: center;">
+          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Flag_of_Colombia.svg" alt="Bandera de Colombia" width="50"></a>
+          <p>Colombia</p>
+        </div>
+        <div style="text-align: center;">
+          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/4/48/Flag_of_Bolivia.svg" alt="Bandera de Bolivia" width="50"></a>
+          <p>Bolivia</p>
+        </div>
+        <div style="text-align: center;">
+          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/e/e8/Flag_of_Ecuador.svg" alt="Bandera de Ecuador" width="50"></a>
+          <p>Ecuador</p>
+        </div>
+        <div style="text-align: center;">
+          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/e/ec/Flag_of_Guatemala.svg" alt="Bandera de Guatemala" width="50"></a>
+          <p>Guatemala</p>
+        </div>
+        <div style="text-align: center;">
+          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Flag_of_El_Salvador.svg" alt="Bandera de El Salvador" width="50"></a>
+          <p>El Salvador</p>
+        </div>
+        <div style="text-align: center;">
+          <a href="#"><img src="https://upload.wikimedia.org/wikipedia/commons/a/ab/Flag_of_Panama.svg" alt="Bandera de Panamá" width="50"></a>
+          <p>Panamá</p>
+        </div>
       </div>
-  </div>
+    </div>
   </div>
 
   <script>
@@ -268,7 +268,7 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
       }
 
       // Construye el mensaje
-      const message = `Hola, mi nombre es ${name}, mi correo es ${email} y mi número de teléfono es ${countryCode} ${phone}. Me interesa la información de los productos.`;
+      const message = `Hola, mi nombre es ${name}, mi correo es ${email} y mi número de teléfono es ${countryCode} ${phone}. Me interesa la información del negocio.`;
 
       // Envía un mensaje de WhatsApp al número especificado
       const whatsappUrl = `https://wa.me/573244473967?text=${encodeURIComponent(message)}`;
