--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="imagenes/IMG-ico.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <title>SALUDDIVINA</title>
     <!-- Meta Pixel Code -->
 <script>
@@ -244,6 +245,24 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
       </div>
     </div>
   </div>
+  <a href="https://wa.me/+573244473967?text=Quiero mas información" class="float-wa" target="_blank">
+    <i class="fa fa-whatsapp" style="margin-top:16px;"></i>
+</a>
+  <style>
+    .float-wa{
+        position:fixed;
+        width:60px;
+        height:60px;
+        bottom:40px;
+        right:40px;
+        background-color:#25d366;
+        color:#FFF;
+        border-radius:50px;
+        text-align:center;
+        font-size:30px;
+        z-index:100;
+    }
+</style>
 
   <script>
     document.getElementById('sendToWhatsApp').addEventListener('click', function () {
