--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
       </div>
     </div>
   </div>
-  <a href="https://wa.me/+573244473967?text=Quiero mas información" class="float-wa" target="_blank">
+  <a href="https://wa.me/+573244473967?text=Hola me puedes ayudar con mas información." class="float-wa" target="_blank">
     <i class="fa fa-whatsapp" style="margin-top:16px;"></i>
 </a>
   <style>
