--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/x-icon" href="imagenes/IMG-ico.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <title>SALUDDIVINA</title>
+  <!-- Flag Icon CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flag-icon-css/3.5.0/css/flag-icon.min.css">
     <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
@@ -181,16 +183,16 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
           <label for="phone">Número de teléfono:</label>
           <div class="phone-input">
             <select id="countryCode">
-              <option value="+1">🇺🇸 +1</option>
-              <option value="+56">🇨🇱 +56</option>
-              <option value="+51">🇵🇪 +51</option>
-              <option value="+52">🇲🇽 +52</option>
-              <option value="+57">🇨🇴 +57</option>
-              <option value="+591">🇧🇴 +591</option>
-              <option value="+593">🇪🇨 +593</option>
-              <option value="+502">🇬🇹 +502</option>
-              <option value="+503">🇸🇻 +503</option>
-              <option value="+507">🇵🇦 +507</option>
+              <option value="+1" data-flag="us">🇺🇸 +1</option>
+              <option value="+56" data-flag="cl">🇨🇱 +56</option>
+              <option value="+51" data-flag="pe">🇵🇪 +51</option>
+              <option value="+52" data-flag="mx">🇲🇽 +52</option>
+              <option value="+57" data-flag="co">🇨🇴 +57</option>
+              <option value="+591" data-flag="bo">🇧🇴 +591</option>
+              <option value="+593" data-flag="ec">🇪🇨 +593</option>
+              <option value="+502" data-flag="gt">🇬🇹 +502</option>
+              <option value="+503" data-flag="sv">🇸🇻 +503</option>
+              <option value="+507" data-flag="pa">🇵🇦 +507</option>
             </select>
             <input type="tel" id="phone" placeholder="Ingresa tu número de teléfono" required>
           </div>
@@ -246,7 +248,7 @@ src="https://www.facebook.com/tr?id=1320673155625730&ev=PageView&noscript=1"
     </div>
   </div>
 
-   <a href="https://wa.me/+573244473967?text=Hola me puedes ayudar con mas información." class="float-wa" target="_blank">
+ <a href="https://wa.me/+573244473967?text=Hola me puedes ayudar con mas información." class="float-wa" target="_blank">
     <i class="fa fa-whatsapp" style="margin-top:16px;"></i>
 </a>
   <style>
